--- a/example/index.html
+++ b/example/index.html
@@ -2,27 +2,43 @@
   <head>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/cyborg/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
-  <link rel="stylesheet" href="style.css">
-    <script src="bundle.js"></script>
-    <style>
-      body { }
+  <script src="bundle.js"></script>
+  <style>
+    body {
+      margin: 10%
+    }
 
-      .message {
-        width: 150px;
-        margin: 1em;
-      }
-      .panel {
-        border: 1px solid black;
-        cursor: pointer;
-      }
-    </style>
+    .message {
+      width: 150px;
+      margin: 1em;
+    }
+    .panel {
+      border: 1px solid black;
+      cursor: pointer;
+    }
+  </style>
   </head>
   <body>
     <div class="row">
-      <div id="form" class="scroll col-md-5"></div>
-      <div id="output" class="col-md-7">
-         <div id="messages"></div>
+
+      <div id="form" class="col-md-5">
+        <div class="panel">
+          <div class="panel-body">
+          <fieldset>
+            <input type="text" placeholder="Type something..." value=""></input>
+            <input type="button" value="Store"></input>
+          </fieldset>
+          </div>
+        </div>
       </div>
+
+      <div id="output" class="col-md-7">
+        <div class="panel">
+          <div class="panel-body">
+           <div id="messages"></div>
+         </div>
+      </div>
+
     </div>
   </body>
 </html>
